# Predictive-coding-LLM

./: .gitignore  README.md  pyproject.toml  requirements-rocm.txt  requirements.txt
configs/: 4b-int8.yaml  kimi-k25-smoke.yaml  smoke.yaml
scripts/: dashboard.py  estimate_params.py  export_int8.py  generate.py  prepare_dataset.py  train.py
src/predictive_coding_llm/: __init__.py  config.py  data.py  hardware.py  metrics.py  modeling_predictive_coding_gpt2.py  modeling_predictive_coding_ssm.py  models.py  trainer.py
web/: app.js  index.html  styles.css
